--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "axios": "^1.3.4",
     "bootstrap": "^3.4.1",
     "bootstrap-icons": "^1.10.3",
+    "emailjs-com": "^3.2.0",
     "jquery": "^3.6.4",
     "nodemailer": "^6.9.1",
+    "path-browserify": "^1.0.1",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -52,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack": "^5.82.1"
   }
 }
