--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://www.finestracat.com",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -56,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "webpack": "^5.82.1"
   }
 }
