--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "cp-cli": "^2.0.0",
     "gh-pages": "^6.2.0",
     "webpack": "^5.82.1"
